# softether-gui-linux

./: .gitignore  README.md  flake.nix  index.html  package-lock.json  package.json  settings.html  settings.json  shell.nix  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.svelte  account.ts  available-settings.json  commandExecutor.ts  main.ts  output.css  settings.json  settings.ts  startup.ts  styles.css  tools.ts  vpnaccount.template
src-tauri/: Cargo.toml  setup.sh  tauri.conf.json
src-tauri/assets/gui/: setroute.sh  vpnaccount.template
src-tauri/src/: main.rs
src/components/: Account.svelte  AccountCreatePage.svelte  AccountsPage.svelte  Button.svelte  Setting.svelte  SettingsPage.svelte  Sidebar.svelte  SidebarComponent.svelte
