[package]
name = "softether-gui-linux"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
extendhash = "*"
tauri = { version = "1.2", features = ["dialog-message", "fs-all", "os-all", "path-all", "shell-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"
nix = "0.26.2"
sysinfo = "0.29.0"
rtnetlink = "0.13.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
